# txray

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/txray-cli/: Cargo.toml  README.md
crates/txray-cli/src/: main.rs
crates/txray-cli/tests/: cli_smoke.rs
crates/txray-core/: Cargo.toml  README.md
crates/txray-core/src/: error.rs  lib.rs
crates/txray-core/src/block/: coinbase.rs  merkle.rs  mod.rs  parser.rs  undo.rs  xor.rs
crates/txray-core/src/tx/: address.rs  hash.rs  mod.rs  parser.rs  script.rs  script_exec.rs  timelock.rs  weight.rs
crates/txray-core/tests/: parse_corpus.rs
crates/txray-corpus/: Cargo.toml  README.md
crates/txray-corpus/src/: lib.rs
crates/txray-lens/: Cargo.toml  README.md
crates/txray-lens/src/: explain.rs  lib.rs  warnings.rs
crates/txray-net/: Cargo.toml  README.md
crates/txray-net/src/: cache.rs  error.rs  fetch.rs  lib.rs
crates/txray-net/tests/: integration.rs
crates/txray-sherlock/: Cargo.toml  README.md
crates/txray-sherlock/src/: advisor.rs  entropy.rs  fingerprint.rs  heuristics.rs  lib.rs
crates/txray-sherlock/tests/: heuristics_corpus.rs
crates/txray-smith/: Cargo.toml  README.md
crates/txray-smith/src/: coin_selection.rs  error.rs  fixture.rs  inspect.rs  lib.rs  psbt.rs  report.rs  transaction.rs  weight.rs
crates/txray-smith/tests/: build_fixtures.rs
crates/txray-tui/: Cargo.toml  README.md
crates/txray-tui/src/: app.rs  data.rs  event.rs  main.rs  theme.rs  ui.rs
web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.mts
web/src/: mdx-components.tsx
web/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
web/src/app/api/__tests__/: routes.test.ts
web/src/app/api/analyze/: route.ts
web/src/app/api/block/[height]/: route.ts
web/src/app/api/health/: route.ts
web/src/app/api/results/[stem]/: route.ts
web/src/app/api/sherlock/analyze/: route.ts
web/src/app/api/tx/[txid]/: route.ts
web/src/app/docs/: layout.tsx  page.tsx
web/src/app/docs/concepts/privacy-basics/: page.mdx
web/src/app/docs/concepts/transaction-structure/: page.mdx
web/src/app/docs/concepts/utxo-model/: page.mdx
web/src/app/docs/getting-started/: page.mdx
web/src/app/docs/heuristics/address-clustering/: page.mdx
web/src/app/docs/heuristics/change-detection/: page.mdx
web/src/app/docs/heuristics/common-input-ownership/: page.mdx
web/src/app/docs/heuristics/fingerprinting/: page.mdx
web/src/app/docs/methodology/lens-parsing/: page.mdx
web/src/app/docs/methodology/sherlock-clustering/: page.mdx
web/src/app/docs/methodology/smith-algorithms/: page.mdx
web/src/app/docs/research/: page.mdx
web/src/app/docs/tools/lens/: page.mdx
web/src/app/docs/tutorials/: page.mdx
web/src/app/explore/famous/: page.tsx
web/src/app/lens/: page.tsx
web/src/app/lens/analyze/: page.tsx
web/src/app/sherlock/: page.tsx
web/src/app/sherlock/[stem]/: page.tsx
web/src/app/sherlock/result/: page.tsx
web/src/app/smith/: page.tsx
web/src/app/tx/[txid]/: page.tsx
web/src/components/docs/: DocNav.tsx  DocSearch.tsx  DocToc.tsx  DocsAudience.tsx  DocsCommandPalette.tsx  DocsControls.tsx  DocsPager.tsx  DocsScrollProgress.tsx  DocsSidebar.tsx  DocsThemeToggle.tsx  DocsZenPill.tsx  docs-config.ts
web/src/components/docs/learning/: CodePlayground.tsx  Quiz.tsx  StepByStep.tsx  TransactionDiagram.tsx  VideoEmbed.tsx  index.ts
web/src/components/lens/: AnalysisView.tsx  AnimatedGraphics.tsx  AnimatedTransactionFlow.tsx  BlockOverview.tsx  ContentScanLoader.tsx  HexTerminal.tsx  LensBackground.tsx  TimelineSection.tsx  UploadCard.tsx
web/src/components/shared/: AppChrome.tsx  BottomCTA.tsx  Footer.tsx  Header.tsx  LandingIllustrations.tsx  ScrollIndicator.tsx  ScrollToTop.tsx  ScrollytellingLayout.tsx  StoryCard.tsx  TiltCard.tsx  TimelineCard.tsx  TxrayLogo.tsx
web/src/components/sherlock/: BlockDetailClient.tsx  ContentScanLoader.tsx  HeuristicPanel.tsx  SherlockBackground.tsx  StoryGraphics.tsx  StorySection.tsx  TransactionFlowGraph.tsx  TxDetailClient.tsx  UploadCard.tsx
web/src/components/smith/: AddressBuilder.tsx  AnimatedPsbtFlow.tsx  SmithBackground.tsx  StoryFlowCard.tsx  StoryGraphics.tsx
web/src/components/ui/: Tooltip.tsx
web/src/context/: MempoolContext.tsx
web/src/hooks/: useMempoolWS.ts  useScrollSpy.ts
web/src/lib/: address.ts  famous.ts  layout.ts  mempool.ts  scriptData.ts  sherlockTypes.ts  themes.ts
web/src/lib/__tests__/: mempool.test.ts
web/src/lib/server/: config.ts  prevoutFetcher.ts  rateLimit.ts  txrayCli.ts
web/src/lib/server/__tests__/: config.test.ts  prevoutFetcher.test.ts  rateLimit.test.ts  txrayCli.test.ts
(+7 files in other folders)
