[package]
name = "txray-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "txray - Parse. Analyze. Build. Learn. Unified Bitcoin CLI."

[[bin]]
name = "txray"
path = "src/main.rs"

[dependencies]
txray-core = { path = "../txray-core" }
txray-lens = { path = "../txray-lens" }
txray-sherlock = { path = "../txray-sherlock" }
txray-smith = { path = "../txray-smith" }
txray-net = { path = "../txray-net" }
txray-corpus = { path = "../txray-corpus" }
clap = { workspace = true }
tokio = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
