[package]
name = "txray-lens"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transaction and block analysis - parse, explain, and generate warnings"

[dependencies]
txray-core = { path = "../txray-core" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
