[package]
name = "txray-sherlock"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Chain analysis heuristics - CIOH, change detection, CoinJoin, wallet fingerprinting"

[dependencies]
txray-core = { path = "../txray-core" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
