[package]
name = "txray-smith"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PSBT building, coin selection, and transaction construction"

[dependencies]
txray-core = { path = "../txray-core" }
bitcoin.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
